worked on update shopping tasks based on edited recipes bug